--- a/pltGUI/pltGUI.vcxproj
+++ b/pltGUI/pltGUI.vcxproj
@@ -313,7 +313,11 @@
     <Xml Include="App\example\xml\test.xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="plt_setting.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="ui_controller.h" />
+    <ClInclude Include="ui_common.h" />
+    <ClInclude Include="ui_plt_setting.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App\example\obj\blacksmith.obj">
