タブのUIとスクロール

--- a/pltGUI/pltGUI.vcxproj.filters
+++ b/pltGUI/pltGUI.vcxproj.filters
@@ -791,5 +791,8 @@
     <ClInclude Include="plt_create.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="my_gui.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
