pltファイルでの色の指定をrgbかhsvか変更するオプションとその変更画面作成

--- a/pltGUI/pltGUI.vcxproj.filters
+++ b/pltGUI/pltGUI.vcxproj.filters
@@ -794,5 +794,8 @@
     <ClInclude Include="my_gui.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="app_option.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
