UIを大幅に改良
- ラジオボタンの作成
- チェックボックスの判定範囲を拡大
- スクロールして見えない範囲のマウスオーバーとクリック無効化
- UIColorを状態で分類
- プロットするデータファイルの選択

--- a/pltGUI/pltGUI.vcxproj.filters
+++ b/pltGUI/pltGUI.vcxproj.filters
@@ -144,6 +144,9 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ui_common.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="App\icon.ico">
