MiniWindowの変更とMenuBarの作成

--- a/pltGUI/pltGUI.vcxproj.filters
+++ b/pltGUI/pltGUI.vcxproj.filters
@@ -785,5 +785,8 @@
     <ClInclude Include="InputPlus.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MenuBar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
