--- a/pltGUI/pltGUI.vcxproj
+++ b/pltGUI/pltGUI.vcxproj
@@ -317,6 +317,7 @@
   <ItemGroup>
     <ClInclude Include="InputPlus.h" />
     <ClInclude Include="GUI.h" />
+    <ClInclude Include="MenuBar.h" />
     <ClInclude Include="MiniWindow.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
