--- a/pltGUI/pltGUI.vcxproj
+++ b/pltGUI/pltGUI.vcxproj
@@ -315,7 +315,7 @@
     <Xml Include="App\example\xml\test.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AppSave.h" />
+    <ClInclude Include="AppSetting.h" />
     <ClInclude Include="InputPlus.h" />
     <ClInclude Include="GUI.h" />
     <ClInclude Include="MenuBar.h" />
