--- a/pltGUI/pltGUI.vcxproj.filters
+++ b/pltGUI/pltGUI.vcxproj.filters
@@ -788,7 +788,7 @@
     <ClInclude Include="MenuBar.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="AppSave.h">
+    <ClInclude Include="AppSetting.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PopupWindow.h">
