TextAreaクラスの作成

--- a/pltGUI/pltGUI.vcxproj
+++ b/pltGUI/pltGUI.vcxproj
@@ -316,12 +316,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AppSetting.h" />
+    <ClInclude Include="Const.h" />
     <ClInclude Include="InputPlus.h" />
     <ClInclude Include="GUI.h" />
     <ClInclude Include="MenuBar.h" />
     <ClInclude Include="MiniWindow.h" />
+    <ClInclude Include="GraphWindow.h" />
     <ClInclude Include="PopupWindow.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="TextArea.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App\example\obj\blacksmith.obj">
