GraphWindowの作成、MiniWindowにスクロール追加、PltSettingの作成、

--- a/pltGUI/pltGUI.vcxproj
+++ b/pltGUI/pltGUI.vcxproj
@@ -322,6 +322,7 @@
     <ClInclude Include="MenuBar.h" />
     <ClInclude Include="MiniWindow.h" />
     <ClInclude Include="GraphWindow.h" />
+    <ClInclude Include="PltSetting.h" />
     <ClInclude Include="PopupWindow.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="TextArea.h" />
