PlotSettingWindowの作成、複数のクラスの名前を変更

--- a/pltGUI/App/Resource.rc
+++ b/pltGUI/App/Resource.rc
@@ -85,33 +85,33 @@ Resource(engine/texture/box-shadow/8.png)
 //
 //	Fonts
 //
-Resource(engine/font/mplus/mplus-1p-thin.ttf.zstdcmp)
-Resource(engine/font/mplus/mplus-1p-light.ttf.zstdcmp)
-Resource(engine/font/mplus/mplus-1p-regular.ttf.zstdcmp)
-Resource(engine/font/mplus/mplus-1p-medium.ttf.zstdcmp)
-Resource(engine/font/mplus/mplus-1p-bold.ttf.zstdcmp)
-Resource(engine/font/mplus/mplus-1p-heavy.ttf.zstdcmp)
-Resource(engine/font/mplus/mplus-1p-black.ttf.zstdcmp)
-Resource(engine/font/noto-cjk/NotoSansCJK-Regular.ttc.zstdcmp)
+//Resource(engine/font/mplus/mplus-1p-thin.ttf.zstdcmp)
+//Resource(engine/font/mplus/mplus-1p-light.ttf.zstdcmp)
+//Resource(engine/font/mplus/mplus-1p-regular.ttf.zstdcmp)
+//Resource(engine/font/mplus/mplus-1p-medium.ttf.zstdcmp)
+//Resource(engine/font/mplus/mplus-1p-bold.ttf.zstdcmp)
+//Resource(engine/font/mplus/mplus-1p-heavy.ttf.zstdcmp)
+//Resource(engine/font/mplus/mplus-1p-black.ttf.zstdcmp)
+//Resource(engine/font/noto-cjk/NotoSansCJK-Regular.ttc.zstdcmp)
 //Resource(engine/font/noto-cjk/NotoSansJP-Regular.otf.zstdcmp)
 
 //
 //	Emoji Fonts
 //
-Resource(engine/font/noto-emoji/NotoColorEmoji.ttf.zstdcmp)
-Resource(engine/font/noto-emoji/NotoEmoji-Regular.ttf.zstdcmp)
+//Resource(engine/font/noto-emoji/NotoColorEmoji.ttf.zstdcmp)
+//Resource(engine/font/noto-emoji/NotoEmoji-Regular.ttf.zstdcmp)
 
 //
 //	Icons
 //
-Resource(engine/font/fontawesome/fontawesome-brands.otf.zstdcmp)
-Resource(engine/font/fontawesome/fontawesome-solid.otf.zstdcmp)
-Resource(engine/font/materialdesignicons/materialdesignicons-webfont.ttf.zstdcmp)
+//Resource(engine/font/fontawesome/fontawesome-brands.otf.zstdcmp)
+//Resource(engine/font/fontawesome/fontawesome-solid.otf.zstdcmp)
+//Resource(engine/font/materialdesignicons/materialdesignicons-webfont.ttf.zstdcmp)
 
 //
 //	Sound Font
 //
-Resource(engine/soundfont/GMGSx.sf2.zstdcmp)
+//Resource(engine/soundfont/GMGSx.sf2.zstdcmp)
 
 //////////////////////////////////////////////////////
 //
