--- a/pltGUI/pltGUI.vcxproj
+++ b/pltGUI/pltGUI.vcxproj
@@ -317,12 +317,13 @@
   <ItemGroup>
     <ClInclude Include="AppSetting.h" />
     <ClInclude Include="Const.h" />
+    <ClInclude Include="PlotSettingWindow.h" />
     <ClInclude Include="InputPlus.h" />
     <ClInclude Include="GUI.h" />
     <ClInclude Include="MenuBar.h" />
     <ClInclude Include="MiniWindow.h" />
-    <ClInclude Include="GraphWindow.h" />
-    <ClInclude Include="PltSetting.h" />
+    <ClInclude Include="PlotDataWindow.h" />
+    <ClInclude Include="PlotSetting.h" />
     <ClInclude Include="PopupWindow.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="TextArea.h" />
