--- a/pltGUI/pltGUI.vcxproj
+++ b/pltGUI/pltGUI.vcxproj
@@ -324,6 +324,7 @@
     <ClInclude Include="MiniWindow.h" />
     <ClInclude Include="PlotDataWindow.h" />
     <ClInclude Include="PlotSetting.h" />
+    <ClInclude Include="PltFile.h" />
     <ClInclude Include="PopupWindow.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="TextArea.h" />
