--- a/pltGUI/pltGUI.vcxproj
+++ b/pltGUI/pltGUI.vcxproj
@@ -318,7 +318,7 @@
     <ClInclude Include="AppSetting.h" />
     <ClInclude Include="Const.h" />
     <ClInclude Include="PlotSettingWindow.h" />
-    <ClInclude Include="InputPlus.h" />
+    <ClInclude Include="MousePlus.h" />
     <ClInclude Include="GUI.h" />
     <ClInclude Include="MenuBar.h" />
     <ClInclude Include="MiniWindow.h" />
