--- a/pltGUI/pltGUI.vcxproj.filters
+++ b/pltGUI/pltGUI.vcxproj.filters
@@ -812,5 +812,8 @@
     <ClInclude Include="PltFile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GraphViewWindow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
