AppLayoutを作成、App設定を追加

--- a/pltGUI/pltGUI.vcxproj.filters
+++ b/pltGUI/pltGUI.vcxproj.filters
@@ -815,5 +815,8 @@
     <ClInclude Include="GraphViewWindow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AppLayout.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
