--- a/pltGUI/pltGUI.vcxproj
+++ b/pltGUI/pltGUI.vcxproj
@@ -315,6 +315,7 @@
     <Xml Include="App\example\xml\test.xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AppLayout.h" />
     <ClInclude Include="AppSetting.h" />
     <ClInclude Include="Const.h" />
     <ClInclude Include="GraphViewWindow.h" />
