--- a/pltGUI/pltGUI.vcxproj
+++ b/pltGUI/pltGUI.vcxproj
@@ -329,6 +329,7 @@
     <ClInclude Include="PltFile.h" />
     <ClInclude Include="PltFileViewWindow.h" />
     <ClInclude Include="PopupWindow.h" />
+    <ClInclude Include="RadioButtons.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="TextArea.h" />
     <ClInclude Include="WholeSetting.h" />
