--- a/pltGUI/pltGUI.vcxproj.filters
+++ b/pltGUI/pltGUI.vcxproj.filters
@@ -827,5 +827,8 @@
     <ClInclude Include="WholeSettingWindow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="RadioButtons.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
