--- a/pltGUI/pltGUI.vcxproj
+++ b/pltGUI/pltGUI.vcxproj
@@ -332,6 +332,8 @@
     <ClInclude Include="PltFileViewWindow.h" />
     <ClInclude Include="PopupWindow.h" />
     <ClInclude Include="RadioButtons.h" />
+    <ClInclude Include="Slider.h" />
+    <ClInclude Include="WithBool.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="TextArea.h" />
     <ClInclude Include="WholeSetting.h" />
